--- a/index.html
+++ b/index.html
@@ -13,26 +13,9 @@
             crossorigin="anonymous"
         />
         <title>Nguyen Manh Duc</title>
-        <style>
-            #intro {
-                background-image: url("https://nmducc2002.github.io.herobg-4k.jpeg");
-                height: 100vh;
-            }
-
-            /* Height for devices larger than 576px */
-            @media (min-width: 992px) {
-                #intro {
-                    margin-top: -58.59px;
-                }
-            }
-
-            .navbar .nav-link {
-                color: #fff !important;
-            }
-        </style>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Oliver Nguyen</a>
                 <button
