--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 				  <li class="nav-item">
 					<a class="nav-link active" aria-current="page" href="#">Home</a>
 				  </li>
-				  <li class="nav-item">
+				  <li class="nav-item d-flex">
 					<a class="nav-link" href="#">Work</a>
 				  </li>
-				  <li class="nav-item">
+				  <li class="nav-item d-flex">
 					<a class="nav-link" href="#">About</a>
 				  </li>
-				  <li class="nav-item">
+				  <li class="nav-item d-flex">
 					<a class="nav-link" href="#">Contact</a>
 				  </li>
 				</ul>
