--- a/index.html
+++ b/index.html
@@ -16,29 +16,58 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<div class="container-fluid">
-			  <a class="navbar-brand" href="#">Oliver Nguyen</a>
-			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			  </button>
-			  <div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-				  <li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">Home</a>
-				  </li>
-				  <li class="nav-item d-flex">
-					<a class="nav-link" href="#">Work</a>
-				  </li>
-				  <li class="nav-item d-flex">
-					<a class="nav-link" href="#">About</a>
-				  </li>
-				  <li class="nav-item d-flex">
-					<a class="nav-link" href="#">Contact</a>
-				  </li>
-				</ul>
-			  </div>
-			</div>
-		  </nav>
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Oliver Nguyen</a>
+                <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav"
+                    aria-controls="navbarNav"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a
+                                class="nav-link active"
+                                aria-current="page"
+                                href="#"
+                                >Home</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Work</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+		<div
+            class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white"
+            style="
+                background-image: url('https://nmducc2002.github.io/herobg-4k.jpeg');
+                height: 100vh;
+            "
+        >
+		<h1 class="mb-3 h2 display-4 fw-bold">Designer & Developer</h1>
+
+  <p>
+    I am a developer and UX/UI designer based in Singapore.
+	I love minimal and brutalist deisgn. 
+	I love fashion, music and art!
+  </p>
+	</div>
 
         <!-- Optional JavaScript; choose one of the two! -->
 
