--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <title>Nguyen Manh Duc</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light shadow-5-strong">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Oliver Nguyen</a>
                 <button
@@ -53,21 +53,20 @@
             </div>
         </nav>
 
-		<div
-            class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white"
+        <div
+            class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white "
             style="
                 background-image: url('https://nmducc2002.github.io/herobg-4k.jpeg');
                 height: 100vh;
+                background-size: cover
             "
         >
-		<h1 class="mb-3 h2 display-4 fw-bold">Designer & Developer</h1>
+            <h1 class="mb-3 h2 display-4 fw-bold">Designer & Developer</h1>
 
-  <p>
-    I am a developer and UX/UI designer based in Singapore.
-	I love minimal and brutalist deisgn. 
-	I love fashion, music and art!
-  </p>
-	</div>
+            <p>I am a developer and UX/UI designer based in Singapore.</p>
+            <p>I love minimal and brutalist deisgn.</p>
+            <p>I love fashion, music and art!</p>
+        </div>
 
         <!-- Optional JavaScript; choose one of the two! -->
 
