--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <title>Nguyen Manh Duc</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light shadow-5-strong">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark shadow-5-strong">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Oliver Nguyen</a>
                 <button
@@ -30,7 +30,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav align-middle justify-content-center">
                         <li class="nav-item">
                             <a
                                 class="nav-link active"
@@ -39,13 +39,13 @@
                                 >Home</a
                             >
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Work</a>
+                        <li class="nav-item d-flex">
+                            <a class="nav-link " href="#">Work</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item d-flex">
                             <a class="nav-link" href="#">About</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item d-flex">
                             <a class="nav-link" href="#">Contact</a>
                         </li>
                     </ul>
@@ -61,7 +61,7 @@
                 background-size: cover
             "
         >
-            <h1 class="mb-3 h2 display-4 fw-bold">Designer & Developer</h1>
+            <h1 class="mb-3 h2 display-4 fw-bold shadow-4-strong">Designer & Developer</h1>
 
             <p>I am a developer and UX/UI designer based in Singapore.</p>
             <p>I love minimal and brutalist deisgn.</p>
