--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
                 </div>
             </div>
         </nav>
-
         <div
             class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white "
             style="
@@ -61,11 +60,12 @@
                 background-size: cover
             "
         >
+        <br><br>
             <h1 class="mb-3 h2 display-4 fw-bold shadow-4-strong">Designer & Developer</h1>
 
-            <p>I am a developer and UX/UI designer based in Singapore.</p>
-            <p>I love minimal and brutalist deisgn.</p>
-            <p>I love fashion, music and art!</p>
+            <p class="shadow">I am a developer and UX/UI designer based in Singapore.</p>
+            <p class="shadow">I love minimal and brutalist design.</p>
+            <p class="shadow">I love fashion, music and art!</p>
         </div>
 
         <!-- Optional JavaScript; choose one of the two! -->
