--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         <br><br>
             <h1 class="mb-3 h2 display-4 fw-bold shadow-4-strong">Designer & Developer</h1>
 
-            <p class="shadow">I am a developer and UX/UI designer based in Singapore.</p>
-            <p class="shadow">I love minimal and brutalist design.</p>
-            <p class="shadow">I love fashion, music and art!</p>
+            <p>I am a developer and UX/UI designer based in Singapore.</p>
+            <p>I love minimal and brutalist design.</p>
+            <p>I love fashion, music and art!</p>
         </div>
 
         <!-- Optional JavaScript; choose one of the two! -->
