--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
         </nav>
         <div
-            class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white "
+            class="bg-image p-5 text-center shadow-1-strong mb-5 text-white "
             style="
                 background-image: url('https://nmducc2002.github.io/herobg-4k.jpeg');
                 height: 100vh;
