--- a/index.html
+++ b/index.html
@@ -15,59 +15,107 @@
         <title>Nguyen Manh Duc</title>
     </head>
     <body>
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark shadow-5-strong">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Oliver Nguyen</a>
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav"
-                    aria-controls="navbarNav"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav align-middle justify-content-center">
-                        <li class="nav-item">
-                            <a
-                                class="nav-link active"
-                                aria-current="page"
-                                href="#"
-                                >Home</a
+        <header>
+            <style>
+                #intro {
+                    background-image: url("https://nmducc2002.github.io/herobg-4k.jpeg");
+                    height: 100vh;
+                    background-size: cover;
+                }
+
+                /* Height for devices larger than 576px */
+                @media (min-width: 992px) {
+                    #intro {
+                        margin-top: -58.59px;
+                    }
+                }
+
+                .navbar .nav-link {
+                    color: #fff !important;
+                }
+            </style>
+
+            <!-- Navbar -->
+            <nav
+                class="navbar fixed-top navbar-expand-sm navbar-dark d-none d-lg-block"
+                style="z-index: 2000"
+            >
+                <div class="container-fluid">
+                    <!-- Navbar brand -->
+                    <a
+                        class="navbar-brand nav-link"
+                        target="_blank"
+                        href="https://mdbootstrap.com/docs/standard/"
+                    >
+                        <strong>Oliver Nguyen</strong>
+                    </a>
+                    <button
+                        class="navbar-toggler"
+                        type="button"
+                        data-mdb-toggle="collapse"
+                        data-mdb-target="#navbarExample01"
+                        aria-controls="navbarExample01"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation"
+                    >
+                        <i class="fas fa-bars"></i>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarExample01">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item active">
+                                <a
+                                    class="nav-link"
+                                    aria-current="page"
+                                    href="#intro"
+                                    >Home</a
+                                >
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#" target="_blank"
+                                    >Work</a
+                                >
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#" target="_blank"
+                                    >About</a
+                                >
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#" target="_blank"
+                                    >Contact</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+
+            <!-- Navbar -->
+
+            <div id="intro" class="bg-image shadow-2-strong">
+                <div class="mask" style="background-color: rgba(0, 0, 0, 0.8)">
+                    <div
+                        class="container d-flex align-items-center justify-content-center text-center h-100"
+                    >
+                        <div class="text-white">
+                            <h1
+                                class="mb-3 h2 display-4 fw-bold shadow-4-strong"
                             >
-                        </li>
-                        <li class="nav-item d-flex">
-                            <a class="nav-link " href="#">Work</a>
-                        </li>
-                        <li class="nav-item d-flex">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item d-flex">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-                    </ul>
+                                Designer & Developer
+                            </h1>
+
+                            <p>
+                                I am a developer and UX/UI designer based in
+                                Singapore.
+                            </p>
+                            <p>I love minimal and brutalist design.</p>
+                            <p>I love philosophy, music and art!</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </nav>
-        <div
-            class="bg-image p-5 text-center shadow-1-strong mb-5 text-white "
-            style="
-                background-image: url('https://nmducc2002.github.io/herobg-4k.jpeg');
-                height: 100vh;
-                background-size: cover
-            "
-        >
-        <br><br>
-            <h1 class="mb-3 h2 display-4 fw-bold shadow-4-strong">Designer & Developer</h1>
-
-            <p>I am a developer and UX/UI designer based in Singapore.</p>
-            <p>I love minimal and brutalist design.</p>
-            <p>I love fashion, music and art!</p>
-        </div>
-
+            <!-- Background image -->
+        </header>
         <!-- Optional JavaScript; choose one of the two! -->
 
         <!-- Option 1: Bootstrap Bundle with Popper -->
