--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <!-- Navbar -->
             <nav
-                class="navbar navbar-expand-lg navbar-dark d-none d-lg-block"
+                class="navbar navbar-dark d-none d-lg-block"
                 style="z-index: 2000"
             >
                 <div class="container-fluid">
@@ -152,7 +152,7 @@
 
                         <div class="col-md-6 gx-5 mb-4">
                             <h4>
-                                <strong>Facilis consequatur eligendi</strong>
+                                <strong>Hello I'm Oliver</strong>
                             </h4>
                             <p class="text-muted">
                                 Lorem ipsum dolor sit amet consectetur
