--- a/index.html
+++ b/index.html
@@ -24,21 +24,14 @@
                     background-size: cover;
                 }
 
-                /* Height for devices larger than 576px */
-                @media (min-width: 992px) {
-                    #intro {
-                        margin-top: -58.59px;
-                    }
-                }
-
                 .navbar .nav-link {
                     color: #fff !important;
                 }
             </style>
 
-            <!-- Navbar -->
+            <!-- Navbar navbar navbar-expand-lg navbar-light bg-light -->
             <nav
-                class="navbar navbar-dark d-none d-lg-block"
+                class="navbar fixed-top navbar-expand-lg navbar-dark d-flex"
                 style="z-index: 2000"
             >
                 <div class="container-fluid">
@@ -53,36 +46,40 @@
                     <button
                         class="navbar-toggler"
                         type="button"
-                        data-mdb-toggle="collapse"
-                        data-mdb-target="#navbarExample01"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarExample01"
                         aria-controls="navbarExample01"
                         aria-expanded="false"
                         aria-label="Toggle navigation"
-                    >
-                        <i class="fas fa-bars"></i>
-                    </button>
+                    ></button>
                     <div class="collapse navbar-collapse" id="navbarExample01">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="#work" target="_blank"
-                                    >Work</a
+                                <a
+                                    class="nav-link"
+                                    href="#work"
+                                    target="_blank"
                                 >
+                                    Work
+                                </a>
                             </li>
                             <li class="nav-item">
                                 <a
                                     class="nav-link"
                                     href="#about"
                                     target="_blank"
-                                    >About</a
                                 >
+                                    About
+                                </a>
                             </li>
                             <li class="nav-item">
                                 <a
                                     class="nav-link"
                                     href="#contact"
                                     target="_blank"
-                                    >Contact</a
                                 >
+                                    Contact
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -94,11 +91,7 @@
             <div id="intro" class="bg-image shadow-2-strong">
                 <div
                     class="mask"
-                    style="
-                        background-color: rgba(0, 0, 0, 0.8);
-                        height: 100vh;
-                        background-size: cover;
-                    "
+                    style="background-color: rgba(0, 0, 0, 0.8); height: 100vh"
                 >
                     <div
                         class="container d-flex align-items-center justify-content-center text-center h-100"
