--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
             <!-- Navbar navbar navbar-expand-lg navbar-light bg-light -->
             <nav
-                class="navbar fixed-top navbar-expand-lg navbar-dark d-flex"
-                style="z-index: 2000"
+                class="navbar fixed-top navbar-expand-lg navbar-dark d-flex shadow-5-strong"
+                style="z-index: 2000; background-color: rgba(0, 0, 0, 0.8);"
             >
                 <div class="container-fluid">
                     <!-- Navbar brand -->
