--- a/index.html
+++ b/index.html
@@ -99,11 +99,10 @@
                         <div class="text-white">
                             <h1 class="mb-3">Designer & Developer</h1>
                             <p>
-                                I am a developer and UX/UI designer based in
-                                Singapore.
+                                Born in 2002 in Hanoi, Vietnam.
                             </p>
-                            <p>I love minimal and brutalist design.</p>
-                            <p>I love philosophy, music and art!</p>
+                            <p>I believe programming is rather a form of art, than just pure mathematics.</p>
+                            <p>With a passion to present the elegant patterns in our daily life, I am pursuing higher studies in algorithms and data structures.</p>
                         </div>
                     </div>
                 </div>
