--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         class="container d-flex align-items-center justify-content-center text-center h-100"
                     >
                         <div class="text-white">
-                            <h1 class="mb-3">Designer & Developer</h1>
+                            <h1 class="mb-3">Developer and Analyst</h1>
                             <p>
                                 Born in 2002 in Hanoi, Vietnam.
                             </p>
@@ -113,7 +113,7 @@
 
         <!--Main layout-->
         <main class="mt-5">
-            <div class="container">
+            <div id="work" class="container">
                 <!--Section: Content-->
                 <section>
                     <div class="row">
@@ -147,12 +147,7 @@
                                 <strong>Hello I'm Oliver</strong>
                             </h4>
                             <p class="text-muted">
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Facilis consequatur eligendi
-                                quisquam doloremque vero ex debitis veritatis
-                                placeat unde animi laborum sapiente illo
-                                possimus, commodi dignissimos obcaecati illum
-                                maiores corporis.
+                                Motivated, teamwork-oriented, and responsible Data Analyst with significant experience in increasing comprehension of reports and presentations by the average professional. Highly educated, possessing a Bachelor's, a Master's, and professional certification in business analytics and financial analytics. Bilingual in English and Vietnamese, with an intermediate understanding of French and Mandarin.
                             </p>
                             <p>
                                 <strong
