--- a/index.html
+++ b/index.html
@@ -151,16 +151,15 @@
                             </p>
                             <p>
                                 <strong
-                                    >Doloremque vero ex debitis
-                                    veritatis?</strong
+                                    >Here are a few technologies I've been working with recently</strong
                                 >
                             </p>
                             <p class="text-muted">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Quod itaque voluptate nesciunt
-                                laborum incidunt. Officia, quam consectetur.
-                                Earum eligendi aliquam illum alias, unde optio
-                                accusantium soluta, iusto molestiae adipisci et?
+                                <ul>
+                                    <li>Python</li>
+                                    <li>JavaScript (ES6+)</li>
+                                    <li>Vue.js</li>
+                                </ul>
                             </p>
                         </div>
                     </div>
