--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
             <style>
                 #intro {
-                    background-image: url("https://nmducc2002.github.io/herobg-4k.jpeg");
+                    background-image: url("https://nmducc2002.github.io/img/herobg-4k.jpeg");
                     height: 100vh;
                     background-size: cover;
                 }
@@ -147,7 +147,7 @@
                                 <strong>Hello I'm Oliver</strong>
                             </h4>
                             <p class="text-muted">
-                                Motivated, teamwork-oriented, and responsible Data Analyst with significant experience in increasing comprehension of reports and presentations by the average professional. Highly educated, possessing a Bachelor's, a Master's, and professional certification in business analytics and financial analytics. Bilingual in English and Vietnamese, with an intermediate understanding of French and Mandarin.
+                                Motivated, teamwork-oriented, and responsible Data Analyst with significant experience in increasing comprehension of reports and presentations by the average professional. Highly educated, pursuing a Bachelor in Business Analytics and Financial Analytics. Bilingual in English and Vietnamese, with an intermediate understanding of French and Mandarin.
                             </p>
                             <p>
                                 <strong
