--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 data-mdb-ripple-color="light"
                             >
                                 <img
-                                    src="https://mdbootstrap.com/img/new/slides/031.jpg"
+                                    src="https://nmducc2002.github.io/img/IMG_4766.jpg"
                                     class="img-fluid"
                                 />
                                 <a href="#!">
