--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 data-mdb-ripple-color="light"
                             >
                                 <img
-                                    src="https://nmducc2002.github.io/img/IMG_4766.jpg"
+                                    src="https://nmducc2002.github.io/img/me.jpg"
                                     class="img-fluid"
                                 />
                                 <a href="#!">
@@ -147,7 +147,7 @@
                                 <strong>Hello I'm Oliver</strong>
                             </h4>
                             <p class="text-muted">
-                                Motivated, teamwork-oriented, and responsible Data Analyst with significant experience in increasing comprehension of reports and presentations by the average professional. Highly educated, pursuing a Bachelor in Business Analytics and Financial Analytics. Bilingual in English and Vietnamese, with an intermediate understanding of French and Mandarin.
+                                Motivated, teamwork-oriented, and responsible Data Analyst with significant experience in increasing comprehension of reports and presentations by the average professional. An ASEAN scholarship holder, pursuing a Bachelor in Business Analytics and Financial Analytics. Bilingual in English and Vietnamese, with an intermediate understanding of French and Mandarin.
                             </p>
                             <p>
                                 <strong
