--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <li class="nav-item">
                                 <a
                                     class="nav-link"
-                                    href="#work"
+                                    href="#/work"
                                     target="_blank"
                                 >
                                     Work
@@ -66,7 +66,7 @@
                             <li class="nav-item">
                                 <a
                                     class="nav-link"
-                                    href="#about"
+                                    href="#/about"
                                     target="_blank"
                                 >
                                     About
@@ -75,7 +75,7 @@
                             <li class="nav-item">
                                 <a
                                     class="nav-link"
-                                    href="#contact"
+                                    href="#/contact"
                                     target="_blank"
                                 >
                                     Contact
