--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <li class="nav-item">
                                 <a
                                     class="nav-link"
-                                    href="#/work"
+                                    href="#work"
                                 >
                                     Work
                                 </a>
@@ -65,7 +65,7 @@
                             <li class="nav-item">
                                 <a
                                     class="nav-link"
-                                    href="#/about"
+                                    href="#about"
                                 >
                                     About
                                 </a>
@@ -73,7 +73,7 @@
                             <li class="nav-item">
                                 <a
                                     class="nav-link"
-                                    href="#/contact"
+                                    href="#contact"
                                 >
                                     Contact
                                 </a>
