--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
                             <li class="nav-item">
                                 <a
                                     class="nav-link"
-                                    href="#work"
+                                    href="#about"
                                 >
-                                    Work
+                                    About
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a
                                     class="nav-link"
-                                    href="#about"
+                                    href="#work"
                                 >
-                                    About
+                                    Work
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -110,7 +110,7 @@
 
         <!--Main layout-->
         <main class="mt-5">
-            <div id="work" class="container">
+            <div id="about" class="container">
                 <!--Section: Content-->
                 <section>
                     <div class="row">
@@ -141,23 +141,22 @@
 
                         <div class="col-md-6 gx-5 mb-4">
                             <h4>
-                                <strong>Hello I'm Oliver</strong>
+                                <strong>#1 - About me</strong>
                             </h4>
-                            <p class="text-muted">
-                                Motivated, teamwork-oriented, and responsible Data Analyst with significant experience in increasing comprehension of reports and presentations by the average professional. An ASEAN scholarship holder, pursuing a Bachelor in Business Analytics and Financial Analytics. Bilingual in English and Vietnamese, with an intermediate understanding of French and Mandarin.
+                            <p class="mt-3">
+                                <strong>Hello I'm Oliver!</strong> </p> 
+                                <p class="text-muted">Motivated, teamwork-oriented, and responsible Data Analyst with significant experience in increasing comprehension of reports and presentations by the average professional. An ASEAN scholarship holder, pursuing a Bachelor in Business Analytics and Financial Analytics. Bilingual in English and Vietnamese, with an intermediate understanding of French and Mandarin.
                             </p>
                             <p>
                                 <strong
                                     >Here are a few technologies I've been working with recently</strong
                                 >
                             </p>
-                            <p class="text-muted">
-                                <ul>
-                                    <li>Python</li>
+                                <ul class="text-muted">
+                                    <li >Python</li>
                                     <li>JavaScript (ES6+)</li>
                                     <li>Vue.js</li>
                                 </ul>
-                            </p>
                         </div>
                     </div>
                 </section>
