--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             </h4>
                             <p class="mt-3">
                                 <strong>Hello I'm Oliver!</strong> </p> 
-                                <p class="text-muted">Motivated, teamwork-oriented, and responsible Data Analyst with significant experience in increasing comprehension of reports and presentations by the average professional. An ASEAN scholarship holder, pursuing a Bachelor in Business Analytics and Financial Analytics. Bilingual in English and Vietnamese, with an intermediate understanding of French and Mandarin.
+                                <p class="text-muted">Motivated, teamwork-oriented, and responsible Data Analyst with significant experience in comprehension of reports. An ASEAN scholarship holder, pursuing a Bachelor in Business Analytics and Financial Analytics. Bilingual in English and Vietnamese, with an intermediate understanding of French and Mandarin.
                             </p>
                             <p>
                                 <strong
