--- a/index.html
+++ b/index.html
@@ -153,9 +153,11 @@
                                 >
                             </p>
                                 <ul class="text-muted">
-                                    <li >Python</li>
+                                    <li>Python</li>
                                     <li>JavaScript (ES6+)</li>
                                     <li>Vue.js</li>
+                                    <li>Signavio</li>
+                                    <li>Microsoft Excel</li>
                                 </ul>
                         </div>
                     </div>
