--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <!-- Navbar navbar navbar-expand-lg navbar-light bg-light -->
             <nav
                 class="navbar fixed-top navbar-expand-lg navbar-dark d-flex shadow-5-strong"
-                style="z-index: 2000; background-color: rgba(0, 0, 0, 0.8);"
+                style="z-index: 2000; background-color: rgba(0, 0, 0, 0.8)"
             >
                 <div class="container-fluid">
                     <!-- Navbar brand -->
@@ -55,26 +55,13 @@
                     <div class="collapse navbar-collapse" id="navbarExample01">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a
-                                    class="nav-link"
-                                    href="#about"
-                                >
-                                    About
-                                </a>
+                                <a class="nav-link" href="#about"> About </a>
                             </li>
                             <li class="nav-item">
-                                <a
-                                    class="nav-link"
-                                    href="#work"
-                                >
-                                    Work
-                                </a>
+                                <a class="nav-link" href="#work"> Work </a>
                             </li>
                             <li class="nav-item">
-                                <a
-                                    class="nav-link"
-                                    href="#contact"
-                                >
+                                <a class="nav-link" href="#contact">
                                     Contact
                                 </a>
                             </li>
@@ -95,11 +82,16 @@
                     >
                         <div class="text-white">
                             <h1 class="mb-3">Developer and Analyst</h1>
+                            <p>Born in 2002 in Hanoi, Vietnam.</p>
                             <p>
-                                Born in 2002 in Hanoi, Vietnam.
+                                I believe programming is rather a form of art,
+                                than just pure mathematics.
                             </p>
-                            <p>I believe programming is rather a form of art, than just pure mathematics.</p>
-                            <p>With a passion to present the elegant patterns in our daily life, I am pursuing higher studies in algorithms and data structures.</p>
+                            <p>
+                                With a passion to present the elegant patterns
+                                in our daily life, I am pursuing higher studies
+                                in algorithms and data structures.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -144,21 +136,47 @@
                                 <strong>#1 - About me</strong>
                             </h4>
                             <p class="mt-3">
-                                <strong>Hello I'm Oliver!</strong> </p> 
-                                <p class="text-muted">Motivated, teamwork-oriented, and responsible Data Analyst with significant experience in comprehension of reports. An ASEAN scholarship holder, pursuing a Bachelor in Business Analytics and Financial Analytics. Bilingual in English and Vietnamese, with an intermediate understanding of French and Mandarin.
+                                <strong>Hello I'm Oliver!</strong>
+                            </p>
+                            <p class="text-muted">
+                                Motivated, teamwork-oriented, and responsible
+                                Data Analyst with significant experience in
+                                comprehension of reports. An ASEAN scholarship
+                                holder, pursuing a Bachelor in Business
+                                Analytics and Financial Analytics. Bilingual in
+                                English and Vietnamese, with an intermediate
+                                understanding of French and Mandarin.
                             </p>
                             <p>
                                 <strong
-                                    >Here are a few technologies I've been working with recently</strong
+                                    >Here are a few technologies I've been
+                                    working with recently</strong
                                 >
                             </p>
-                                <ul class="text-muted">
-                                    <li>Python</li>
-                                    <li>JavaScript (ES6+)</li>
-                                    <li>Vue.js</li>
-                                    <li>Signavio</li>
-                                    <li>Microsoft Excel</li>
-                                </ul>
+                            <div class="container">
+                                <div class="row">
+                                    <ul class="text-muted">
+                                        <div class="col-6 col-sm-4">
+                                            <li>Python</li>
+                                        </div>
+                                        <div class="col-6 col-sm-4">
+                                            <li>JavaScript (ES6+)</li>
+                                        </div>
+
+                                        <!-- Force next columns to break to new line at md breakpoint and up -->
+                                        <div
+                                            class="w-100 d-none d-md-block"
+                                        ></div>
+
+                                        <div class="col-6 col-sm-4">
+                                            Signavio
+                                        </div>
+                                        <div class="col-6 col-sm-4">
+                                            Microsoft Excel
+                                        </div>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </section>
