--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
                                         ></div>
 
                                         <div class="col-6 col-sm-4">
-                                            Signavio
+                                            <li>Signavio</li>
                                         </div>
                                         <div class="col-6 col-sm-4">
-                                            Microsoft Excel
+                                            <li>Microsoft Excel</li>
                                         </div>
                                     </ul>
                                 </div>
