--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <!--Section: Content-->
                 <section>
                     <div class="row">
-                        <div class="col-md-6 gx-5 mb-4">
+                        <div class="col-xl-6 gx-5 mb-4">
                             <div
                                 class="bg-image hover-overlay ripple shadow-2-strong rounded-5"
                                 data-mdb-ripple-color="light"
