--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-6 gx-5 mb-4">
+                        <div class="col-xl-6 gx-5 mb-4">
                             <h4>
                                 <strong>#1 - About me</strong>
                             </h4>
